# sandbox

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile.in
docs/商务文档/合同/: 付款计划.md  合同模板.md  报价明细.md
docs/商务文档/需求/: 需求文档.md
docs/技术文档/开发/: 开发环境说明.md
docs/技术文档/架构/: 技术方案.md
docs/技术文档/设计/: 设计文档.md
docs/质量文档/其他/: 其他文档.md
docs/质量文档/标准/: 文档管理计划.md  标准文档.md
docs/质量文档/标准/模板/: README.md
docs/质量文档/标准/模板/商务文档/: 交付文档模板.md  合同文档模板.md  商务文档模板.md  需求文档模板.md
docs/质量文档/标准/模板/技术文档/: 开发文档模板.md  接口文档模板.md  架构文档模板.md  测试文档模板.md  设计文档模板.md  质量文档模板.md  运维文档模板.md
docs/质量文档/标准/模板/质量文档/: 标准文档模板.md  测试文档模板.md  评审文档模板.md
docs/质量文档/标准/模板/运维文档/: 故障文档模板.md  维护文档模板.md  部署文档模板.md
docs/质量文档/标准/模板/项目管理/: 会议文档模板.md  会议纪要模板.md  报告文档模板.md  计划文档模板.md  进度报告模板.md  项目管理文档模板.md  项目计划书模板.md
docs/质量文档/测试/: 测试计划.md
docs/质量文档/评审/: 评审文档.md
docs/运维文档/维护/: 运维文档.md
docs/运维文档/部署/: 部署文档.md
docs/项目管理/会议/: 会议文档.md
docs/项目管理/报告/: 报告文档.md
docs/项目管理/计划/: 文档管理计划.md  计划文档.md  项目计划书.md
include/: Version.hpp  Version.hpp.in
include/core/: Constants.hpp
sandbox/: .gitignore  CMakeLists.txt  说明文档.md
sandbox/docs/: 编码规范.md  设计文档.md
sandbox/docs/business/: 技术需求.md  签约材料清单.md  项目建议书.md  项目计划书.md  验收标准.md
sandbox/docs/technical/: 详细技术方案.md
sandbox/include/: Version.hpp  Version.hpp.in
sandbox/include/core/: Types.hpp
sandbox/include/physics/: GravitySystem.hpp
sandbox/scripts/: update_version.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt
